# SoSe25-Aufgabe-3

./: .pdm-python  README.md  main.py  my_classes.py  pyproject.toml  test.py
