[project]
name = "ErgometerLeistungstest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Katharina", email = "sk3482@mci4me.at"},
    {name = "31eule", email = "sk3482@mci4me.at"},
]
dependencies = [
    "numpy>=2.2.4",
    "np>=1.0.2",
    "pandas>=2.2.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
